tests/models/struct/named/u8/fail/alias.rs
use dade::model;
#[model]
struct TestModel {
    #[field(alias = 2)]
    value: u8,
}
fn main() {}
